fully cache small audio/video

Also, make fully cached audio/videos re-usable even if the server doesn't
support ranges.

This only fixes BUG 716478, for videos smaller than 25 Mb, and only if
we decide to read the whole video during preloading.

Next step: Make fully cached videos seekable.

BUG=716748

Review-Url: https://codereview.chromium.org/2910553002
Cr-Commit-Position: refs/heads/master@{#475122}

Former-commit-id: 1d6585623812b57dca641bb5ecb0fff82f9c9da4